# gcli-zero

./: .gitignore  .gwa.toml  COPILOT_LOG.md  DEV_SUBMISSION_TEMPLATE.md  README.md  pyproject.toml
.github/: copilot-instructions.md
src/git_workflow_automator/: __init__.py  audit.py  cli.py  config.py  policy.py
tests/: test_audit.py  test_cli.py  test_config.py  test_integration.py  test_policy.py
